# cli-agent

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  Заданиe для Мегашколы Coding agents.md
.github/workflows/: code-agent.yml  reviewer.yml
src/megashkola_agent/: cli.py  code_agent.py  config.py  github_client.py  llm.py  reviewer.py  reviewer_cli.py
